--- a/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Admin/ListStudent.cshtml
+++ b/Project/StudentMangerment/PresentationLayer/PresentationLayer/Views/Admin/ListStudent.cshtml
@@ -111,17 +111,17 @@
                                 @foreach (var s in Model.Students)
                                 {
                                     <tr>
-                                        <td>@s.StudentId</td>
+                                        <td>@s.Id</td>
                                         <td>@s.User.FullName</td>
                                         <td>@s.StudentCode</td>
                                         <td>@s.User.Email</td>
                                         <td>@s.User.Phone</td>
                                         <td>
                                             <div class="btn-group" role="group">
-                                                <a asp-action="Detail" asp-route-id="@s.StudentId" class="btn btn-outline-info btn-sm btn-icon-text">
+                                                <a asp-action="Detail" asp-route-id="@s.Id" class="btn btn-outline-info btn-sm btn-icon-text">
                                                     <i class="mdi mdi-eye"></i> Chi tiết
                                                 </a>
-                                                <a asp-action="Edit" asp-route-id="@s.StudentId" class="btn btn-outline-warning btn-sm btn-icon-text">
+                                                <a asp-action="Edit" asp-route-id="@s.Id" class="btn btn-outline-warning btn-sm btn-icon-text">
                                                     <i class="mdi mdi-pencil"></i> Sửa
                                                 </a>
                                                
